--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <!--MAIN ACTIVITY STRINGS-->
+    <string name="empty_view_text">No items in this category.</string>
 
     <!--PRODUCT LIST ITEM STRINGS-->
     <string name="product_quantity">
@@ -36,11 +37,8 @@
 
 
     <!--NAV DRAWER TITLES-->
-    <string name="title_add_new">Add New</string>
-    <string name="title_add_products">New Products</string>
-    <string name="title_add_supplier">New Supplier</string>
-    <string name="category_header">Categories</string>
-    <string name="suppliers_header">Suppliers</string>
+    <string name="nav_header_text">Category Browser</string>
+    <string name="nav_subheader_text">Refresh product list by category</string>
     <string name="nav_category_menu_header">Categories</string>
 
     <!--PRODUCT DETAILS SCREEN STRINGS-->
@@ -123,4 +121,7 @@
     <string name="content_uri_unsupported_insertion_exception">Insertion is not supported for <xliff:g name="URI">%s</xliff:g></string>
     <string name="content_uri_insert_failure_exception">Failed to insert row for <xliff:g name="URI">%s</xliff:g></string>
     <string name="content_uri_unknown_exception">Unknown URI <xliff:g name="URI">%s</xliff:g> for <xliff:g name="UriMatcher">%d</xliff:g></string>
+    <string name="product_decrease">-</string>
+    <string name="product_increase">+</string>
+
 </resources>
